<resources>
    <string name="app_name">Just Java2</string>
    <string name="Quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="minus">-</string>
    <string name="value">0</string>
    <string name="add">+</string>
    <string name="price">Order Summary</string>
    <string name="dollar">$0</string>
    <string name="order">order</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate</string>
    <string name="name">Enter Your Name Here</string>
</resources>